2001-02-04  Kevin Ryde  <kevin@swox.se>

	* mpn/alpha/ev5/gmp-mparam.h, mpn/mips3/gmp-mparam.h,
	mpn/powerpc32/gmp-mparam.h, mpn/powerpc64/gmp-mparam.h,
	mpn/sparc64/gmp-mparam.h, mpn/x86/*/gmp-mparam.h:
	Update tuned parameters.

	* mpn/x86/i486: New directory.
	* configure.in (i486-*-*): Use it.
	* mpn/x86/i486/gmp-mparam.h: New file.

	* mpn/x86/pentium/mode1o.asm: New file.
	* mpn/x86/p6/mode1o.asm: New file.

	* tune/many.pl: Use $(ASMFLAGS_PIC) and $(CFLAGS_PIC).

	* gmp.texi (Integer Division): Another rewording of 2exp divisions.

2001-02-03  Torbjorn Granlund  <tege@swox.com>

	* mpn/ia64/popcount.asm: Put a `;;' break at end of main loop.

	* configure.in (arm*-*-*): Set gcc_cflags in order to pass
	$fomit_frame_pointer.

	* tests/mpz/t-mul.c (base_mul): Remove an unused variable.

2001-02-02  Torbjorn Granlund  <tege@swox.com>

	* demos/pexpr.c (TIME): New macro.
	(main): Use TIME--print timing more accurately.
	(setup_error_handler): Increase RLIMIT_DATA to 16 Mibyte.

	* longlong.h (arm): Add __CLOBBER_CC to add_ssaaaa and sub_ddmmss.

2001-02-02  Kevin Ryde  <kevin@swox.se>

	* configure.in: Don't remove gmp-mparam.h and mpn source links under
	--no-create since in that case they're not re-created.

	* demos/expr: New directory.
	* Makefile.am (SUBDIRS, allprogs): Add it.
	* demos/expr/README, Makefile.am, expr.c, exprv.c, exprz.c, exprza.c,
	exprq.c, exprqa.c, exprfa.c, exprf.c, exprfr.c, exprfra.c, expr.h,
	expr-impl-h.in, run.c, t-expr.c: New files.
	* configure.in: Generate demos/expr/Makefile & demos/expr/expr-impl.h.

	* Makefile.am: Remove mpfr from main libgmp.
	* mpfr/Makefile.am: Build and install separate libmpfr.a.
	* mpfr/*: Update to mpfr 2001.

	* gmp-h.in (__GNU_MP_VERSION_MINOR): Bump to 2.
	* Makefile.am (libtool -version-info): Bump appropriately.
	* NEWS: Updates.

	* tune/divrem1div.c, tune/divrem1inv.c, tune/divrem2div.c,
	tune/divrem2inv.c: Renamed from divrem_{1,2}_{div,inv}.c, to be unique
	in DOS 8.3 filenames.